log
Thu 25 Apr 2024 10:12:46 PM UTC: 
 hashmap.c | 26 +++++++++++++++++++++++---
 1 file changed, 23 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:53:23: error: implicit declaration of function ‘resolveCollision’ [-Werror=implicit-function-declaration]
   53 |     int newPosition = resolveCollision(map, position);
      |                       ^~~~~~~~~~~~~~~~
hashmap.c:53:9: error: unused variable ‘newPosition’ [-Werror=unused-variable]
   53 |     int newPosition = resolveCollision(map, position);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
dfe00e0
